kustomize/components/service-mesh-istio/productcatalogservice-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: productcatalogservice
spec:
  host: productcatalogservice
  subsets:
  - name: stable
    labels:
      version: stable
  - name: canary
    labels:
      version: canary
